# docker-geoserver

./: .dockerignore  .env  .gitignore  404.html  Docker-Hub.md  Dockerfile  README-docker-hub.md  README.md  dev-geoserver-nginx.yml  docker-compose-dev-geoserver-nginx.yml  docker-compose-dev.yml  docker-compose-geoserver-dev.yml  docker-compose-geoserver-nginx-dev.yml  docker-compose-geoserver-nginx.yml  docker-compose-geoserver.yml  docker-compose-nginx-dev.yml  docker-compose-staging-nginx.yml  docker-compose-staging.yml  docker-compose.yml  index.html  mkdocs.yml  search.html  sitemap.xml  staging.yml
.github/workflows/: docker-image.yml
archive/: download-tomcat.sh
docs/: pyproject.toml
docs/guides/: dockerhub.md  geoserver-extension.md  manage-datadir.md  nginx-certbot.md
files/geoserver/: web.xml
files/tomcat/: tomcat-users.xml
geoserver/: Dockerfile  README.md
geoserver/data/security/: geoserver.jceks  masterpw.digest  masterpw.info  version.properties
geoserver/files/: extensions.txt  web.xml
geoserver/script/: start_geoserver.sh
geoserver/scripts/: download-extensions.sh  download-geoserver.sh  download-plugins.sh  start-geoserver.sh  start_geoserver.sh  tomcat.service
guides/dockerhub/: index.html
guides/geoserver-extension/: index.html
guides/manage-datadir/: index.html
guides/nginx-certbot/: index.html
nginx/: Dockerfile
nginx/files/: geoserver.conf  geoserver_dev.conf
scripts/: demo-data.sh  download-extensions.sh  download-geoserver.sh  start-geoserver.sh  tomcat.sh
search/: search_index.json
(+30 files in other folders)
