[tool.poetry]
name = "docker-geoserver-docs"
version = "0.1.0"
description = "Project's documentation."
authors = ["Massimiliano Moraca <info@massimilianomoraca.it>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
